--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang ="en">
     <head>
         <meta charset="UTF-8">
-        <title> Events 2020|Responsive web Assignment2</title>
+        <title> Portfoilio</title>
         <!--ViewPort-->
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <!--CSS-->
